--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
 # ----- Template UI ------
 BUILD_LANGUAGES=en-US,it-IT,fr-FR
 BUILD_CMS=sanity
-NEXT_PUBLIC_SITE_NAME=
-NEXT_PUBLIC_SITE_URL=
+NEXT_PUBLIC_SITE_NAME=cool-sunshine-cacc22
+NEXT_PUBLIC_SITE_URL=https://cool-sunshine-cacc22.netlify.app/
 
 # ----- Commerce Layer ------
-CL_CLIENT_ID=
-CL_ENDPOINT=
+CL_CLIENT_ID=DL_9IbSfeNKxHjgh5RIatWIAmhTFjItooiDHaKxOCpQ
+CL_ENDPOINT=https://frlmilano.commercelayer.io
 
 # ----- Sanity Studio ------
 NEXT_PUBLIC_SANITY_PROJECT_TITLE=seashell-penguin
